<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/bg"
    xmlns:tools="http://schemas.android.com/tools"
    tools:openDrawer="end"
    android:id="@+id/filterDrawer"
    android:orientation="vertical">
    <RelativeLayout

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="190dp"

        >

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:fontFamily="@font/meera_regular"
            android:textSize="35sp"
            android:textStyle="bold"
            android:textColor="@color/colorwhite"
            android:text="@string/reason"
            />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
        <LinearLayout
            android:id="@+id/l1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background"
            android:clickable="true"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:weightSum="3"
            android:orientation="horizontal">
   <!-- <CheckBox
        android:id="@+id/chekcbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_weight="2.7"
        android:textColor="#000000"
        android:layout_marginBottom="5dp"
        android:text=""
        android:gravity="left"
        />-->
    <TextView
        android:id="@+id/txtvnotsatisfied"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:paddingLeft="20dp"
        android:layout_weight="0.8"
        android:layout_marginRight="40dp"
        android:textColor="@color/colorwhite"
        android:layout_marginBottom="5dp"
        android:text="@string/notsatisfied"
        android:gravity="center"
        />



</LinearLayout>

        <LinearLayout
            android:id="@+id/l2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:clickable="true"
            android:layout_marginBottom="10dp"
            android:weightSum="3"
            android:orientation="horizontal">
          <!--  <CheckBox
                android:id="@+id/chekcbox1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_weight="2.7"
                android:textColor="#000000"
                android:layout_marginBottom="5dp"
                android:text=""
                android:gravity="left"
                />-->
            <TextView
                android:id="@+id/txtvSpeed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:paddingLeft="20dp"
                android:layout_marginRight="90dp"
                android:textColor="@color/colorwhite"
                android:layout_marginBottom="5dp"
                android:text="@string/speed"
                android:gravity="center"
                />



        </LinearLayout>
        <LinearLayout
            android:id="@+id/l3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:clickable="true"
            android:layout_marginBottom="10dp"
            android:weightSum="3"
            android:orientation="horizontal">
           <!-- <CheckBox
                android:id="@+id/chekcbox2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_weight="2.7"
                android:textColor="#000000"
                android:layout_marginBottom="5dp"
                android:text=""
                android:gravity="left"
                />-->
            <TextView
                android:id="@+id/txtvImprove"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:textColor="@color/colorwhite"
                android:layout_marginRight="90dp"
                android:layout_marginBottom="5dp"
                android:text="@string/improve"
                android:gravity="right"
                />



        </LinearLayout>
        <LinearLayout
            android:id="@+id/l4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:clickable="true"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:weightSum="3"
            android:orientation="horizontal">
       <!--     <CheckBox
                android:id="@+id/chekcbox3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_weight="2.7"
                android:textColor="#000000"
                android:layout_marginBottom="5dp"
                android:text=""
                android:gravity="left"
                />-->
            <TextView
                android:id="@+id/txtvOthers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:textColor="@color/colorwhite"
                android:layout_marginRight="220dp"
                android:paddingLeft="20dp"
                android:layout_marginBottom="5dp"
                android:text="@string/others"
                android:gravity="center"
                />



        </LinearLayout>
      <!--  <RelativeLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:layout_weight="1"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="50dp"

            >

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:fontFamily="@font/meera_regular"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@color/colorwhite"
                android:text="@string/mobile"
                />
        </RelativeLayout>-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorwhite"
                android:gravity="center"
                android:layout_marginLeft="30dp"
                android:fontFamily="@font/meera_regular"
                android:textStyle="bold"
                android:layout_marginTop="15dp"
                android:textSize="20dp"
                android:text="@string/mobile"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp">
                <EditText
                    android:id="@+id/txtvMobno"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:textColor="#000000"
                    android:inputType="phone"
                    android:padding="10dp"
                    android:textStyle="bold"
                    android:background="@drawable/btn1"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"/>
                <Button
                    android:id="@+id/btnSubmit"
                    android:text="@string/submit"
                    android:layout_weight="2.5"
                   android:layout_margin="8dp"
                    android:textColor="@color/colorwhite"
                    android:background="@drawable/btnsubmit"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"/>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


</LinearLayout>
